--- a/requirements_microservices.txt
+++ b/requirements_microservices.txt
@@ -4,15 +4,12 @@ uvicorn[standard]==0.24.0
 httpx==0.25.2
 pydantic==2.5.0
 
-# Data processing
-pandas==2.1.4
-numpy==1.24.3
-openpyxl==3.1.2
-xlrd==2.0.1
-
-# Machine Learning
-catboost==1.2.2
-scikit-learn==1.3.2
+# ML and Data Processing
+pandas>=1.5.0
+numpy>=1.21.0
+scikit-learn>=1.1.0
+lightgbm>=4.0.0
+joblib>=1.2.0
 
 # Dashboard
 streamlit==1.29.0
