--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-pandas
-lightgbm
-scikit-learn
-joblib
+streamlit>=1.28.0
+pandas>=1.5.0
+plotly>=5.15.0
+openpyxl>=3.1.0
+lightgbm>=4.0.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+numpy>=1.24.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+python-multipart>=0.0.6
+aiofiles>=23.2.0
